--- a/WorkingWithRazor/WorkingWithRazor/Views/Home/Index.cshtml
+++ b/WorkingWithRazor/WorkingWithRazor/Views/Home/Index.cshtml
@@ -2,11 +2,29 @@
 @{
     ViewBag.Title = "Index";
 }
-This is a list of fruit names:
-@foreach (string name in Model)
-{
-    <span><b>@name</b></span>
-}
 
-<h2>Index</h2>
+@section Header
+    {
+    <div class="view">
+        @foreach (string str in new [] { "Home","List","Edit"})
+        {
+            @Html.ActionLink(str, str, null,new { style="margin:5px"})
+        }
+    </div>
+    }
+
+<div class="view">
+    This is a list of fruit names:
+    @foreach (string name in Model)
+    {
+        <span><b>@name</b></span>
+    }
+</div>
+
+@section Footer
+{
+<div class="view">
+    This is the footer
+    </div>
+    }
 
